--- a/SpajalicaBackEnd/composer.json
+++ b/SpajalicaBackEnd/composer.json
@@ -20,7 +20,7 @@
             "database"
         ],
         "psr-4": {
-            "SpajalicaBackEnd\\": "app/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
